--- a/HW5_myfs/README
+++ b/HW5_myfs/README
@@ -14,3 +14,7 @@
 3. Can obtain the results by:
    - cat /output/add → returns a + b
    - cat /output/sub → returns a – b
+
+Execution process:
+![image](https://github.com/20sharon/LinuxKernel/blob/main/HW5_myfs/%E5%9F%B7%E8%A1%8C%E6%88%AA%E5%9C%9601.png)
+![image](https://github.com/20sharon/LinuxKernel/blob/main/HW5_myfs/%E5%9F%B7%E8%A1%8C%E6%88%AA%E5%9C%9602.png)
