--- a/HW5_myfs/README
+++ b/HW5_myfs/README
@@ -16,5 +16,5 @@
    - cat /output/sub → returns a – b
 
 Execution process:
-![image](https://github.com/20sharon/LinuxKernel/blob/main/HW5_myfs/%E5%9F%B7%E8%A1%8C%E6%88%AA%E5%9C%9601.png)
+![image](https://github.com/20sharon/LinuxKernel/blob/main/HW5_myfs/Execution_process_01.png)
 ![image](https://github.com/20sharon/LinuxKernel/blob/main/HW5_myfs/%E5%9F%B7%E8%A1%8C%E6%88%AA%E5%9C%9602.png)
